<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5BB81"
    android:orientation="vertical" >

    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >

           <!-- *********************************************************************** -->

           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="14dp"
               android:gravity="center_vertical" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="8dp"
                   android:text="@string/set_net"
                   android:textColor="#000"
                   android:textSize="17sp" />
               
           </RelativeLayout>

           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="14dp"
               android:background="@drawable/preference_first_item"        
               android:gravity="center_vertical" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="12dp"
                   android:text="@string/set_server_ip"
                   android:textColor="#000"
                   android:textSize="18sp" />

               <EditText
                   android:id="@+id/editText1"
                   android:layout_width="180dp"
                   android:layout_height="40dp"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:ems="10" android:inputType="text">

                   <requestFocus />
               </EditText>

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="0.32"
               android:background="@drawable/preference_item"
               android:gravity="center_vertical" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="12dp"
                   android:text="@string/set_server_port"
                   android:textColor="#000"
                   android:textSize="18sp" />
               
               <EditText
                   android:id="@+id/editText2"
                   android:layout_width="180dp"
                   android:layout_height="40dp"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:ems="10" android:inputType="text" >

                   <requestFocus />
               </EditText>
           </RelativeLayout>

           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/preference_item"
               android:gravity="center_vertical" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="12dp"
                   android:text="@string/set_cid"
                   android:textColor="#000"
                   android:textSize="18sp" />
               <EditText
                   android:id="@+id/editText3"
                   android:layout_width="180dp"
                   android:layout_height="40dp"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:ems="10" android:inputType="text" >

                   <requestFocus />
               </EditText>
           </RelativeLayout>
           
           
           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/preference_last_item"
               android:layout_marginBottom="10dp"
               android:gravity="center_vertical" >

                <Button
                    android:id="@+id/button_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/setButton" />

                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toLeftOf="@+id/button_set"
                    android:text="@string/editButton" />

           </RelativeLayout>
           
           
           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="14dp"
               android:gravity="center_vertical" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="8dp"
                   android:text="@string/set_about"
                   android:textColor="#000"
                   android:textSize="17sp" />

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="14dp"
               android:background="@drawable/preference_first_item"
               android:clickable="true"
               android:gravity="center_vertical"
               android:onClick="help" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="12dp"
                   android:text="@string/help"
                   android:textColor="#000"
                   android:textSize="18sp" />

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:scaleType="matrix"
                   android:src="@drawable/mm_submenu" android:contentDescription="@string/app_name"/>
           </RelativeLayout>

           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/preference_last_item"
               android:clickable="true"
               android:gravity="center_vertical"
               android:onClick="about" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="12dp"
                   android:text="@string/about"
                   android:textColor="#000"
                   android:textSize="18sp" />

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:scaleType="matrix"
                   android:src="@drawable/mm_submenu" android:contentDescription="@string/app_name"/>
           </RelativeLayout>
       </LinearLayout>
    </ScrollView>
    
    
</LinearLayout>
